Fix merge problems
Signed-off-by: Thomas Mäder <tmader@redhat.com>